@@ -4,20 +4,15 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 import school.faang.user_service.dto.event.EventFilterDto;
 import school.faang.user_service.exception.ResourceNotFoundException;
-import school.faang.user_service.filter.EventByOwnerFilter;
 import school.faang.user_service.filter.EventFilter;
-import school.faang.user_service.filter.EventTitleFilter;
 import school.faang.user_service.mapper.EventMapper;
 import school.faang.user_service.dto.event.EventDto;
 import school.faang.user_service.entity.event.Event;
-import school.faang.user_service.mapper.SkillMapper;
-import school.faang.user_service.repository.UserRepository;
 import school.faang.user_service.repository.event.EventRepository;
 import school.faang.user_service.validator.EventValidator;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Component
@@ -26,10 +21,8 @@ import java.util.stream.Stream;
 public class EventService {
 
     private final EventRepository eventRepository;
-    private final UserRepository userRepository;
     private final EventMapper eventMapper;
-    private final SkillMapper skillMapper;
-    private final List<EventFilter> eventFilters = List.of(new EventByOwnerFilter(), new EventTitleFilter());
+    private final List<EventFilter> eventFilters; //= List.of(new EventByOwnerFilter(), new EventTitleFilter());
     private final EventValidator eventValidator;
 
     public EventDto create(EventDto eventDto) {
@@ -40,18 +33,17 @@ public class EventService {
 
     public EventDto getEventById(long eventId) {
         eventValidator.eventValidation(eventId);
-        Event event = eventRepository.getById(eventId);
-        return eventMapper.toDto(event);
+        Optional<Event> event = eventRepository.findById(eventId);
+        return eventMapper.toDto(event.orElse(null));
     }
 
     public List<EventDto> getEventsByFilter(EventFilterDto filters) {
         Stream<Event> events = eventRepository.findAll().stream();
-        for (EventFilter filter : eventFilters) {
-            if (filter.isApplicable(filters)) {
-                events = filter.apply(events, filters);
-            }
-        }
-        return eventMapper.toDtoList(events.collect(Collectors.toList()));
+
+        return eventFilters.stream().filter(filter ->filter.isApplicable(filters))
+                .flatMap(filter -> filter.apply(events, filters))
+                .map(eventMapper::toDto)
+                .toList();
     }
 
     public void deleteEvent(Long eventId) {
@@ -63,15 +55,8 @@ public class EventService {
         eventValidator.eventValidation(eventId);
         eventValidator.inputDataValidation(eventDto);
         Event eventEntity = eventRepository.findById(eventId)
-                .orElseThrow(() -> new ResourceNotFoundException("Событие не найдено"));
-        eventEntity.setId(eventDto.getId());
-        eventEntity.setTitle(eventDto.getTitle());
-        eventEntity.setStartDate(eventDto.getStartDate());
-        eventEntity.setEndDate(eventDto.getEndDate());
-        eventEntity.setDescription(eventDto.getDescription());
-        eventEntity.setRelatedSkills(skillMapper.toEntityList(eventDto.getRelatedSkills()));
-        eventEntity.setLocation(eventDto.getLocation());
-        eventEntity.setMaxAttendees(eventDto.getMaxAttendees());
+                .orElseThrow(() -> new ResourceNotFoundException("Событие id" + eventId + " не найдено"));
+        eventEntity = eventMapper.toEntity(eventDto);
         return eventMapper.toDto(eventRepository.save(eventEntity));
     }
 
